--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "2
 maintenance = { status = "actively-developed" }
 
 [features]
-constellation = ["constellation-rs", "serde_traitobject"]
+constellation = ["bincode", "constellation-rs", "serde_traitobject"]
 aws = ["amadeus-aws"]
 commoncrawl = ["amadeus-commoncrawl"]
 parquet = ["amadeus-parquet", "amadeus-derive/parquet"]
@@ -44,6 +44,7 @@ amadeus-parquet = { version = "=0.3.6", path = "amadeus-parquet", optional = tru
 amadeus-postgres = { version = "=0.3.6", path = "amadeus-postgres", optional = true }
 amadeus-serde = { version = "=0.3.6", path = "amadeus-serde", optional = true }
 async-channel = "1.1"
+bincode = { version = "1.3", optional = true }
 constellation-rs = { version = "0.2.0-alpha.2", default-features = false, optional = true }
 derive-new = "0.5"
 doc-comment = "0.3"
@@ -62,7 +63,9 @@ web-sys = { version = "0.3", features = ["Blob", "Performance", "Response", "Win
 
 [dev-dependencies]
 either = { version = "1.5", features = ["serde"] }
+once_cell = "1.4"
 rand = "0.7"
+rayon = "1.3"
 serde_json = "1.0"
 streaming_algorithms = "0.3"
 tokio = { version = "0.2", features = ["macros", "time"] }
