--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -37,6 +37,7 @@ sum = { version = "0.1", features = ["futures", "serde"] }
 tokio = { version = "0.2", features = ["blocking", "rt-core"] }
 walkdir = "2.2"
 widestring = "0.4"
+num = "0.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
