--- a/amadeus-streaming/Cargo.toml
+++ b/amadeus-streaming/Cargo.toml
@@ -22,10 +22,11 @@ maintenance = { status = "actively-developed" }
 nightly = ["packed_simd"]
 
 [dependencies]
-twox-hash = "1.1"
-serde = { version = "1.0", features = ["derive"] }
-rand = { version = "0.7", features = ["small_rng"] }
 packed_simd = { version = "0.3", features = ["into_bits"], optional = true }
+rand = { version = "0.7", features = ["small_rng"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_closure = "0.3"
+twox-hash = "1.1"
 
 [build-dependencies]
 rustversion = "1.0"
