--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -34,7 +34,7 @@ rand = "0.7"
 replace_with = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
-sum = { version = "0.1", features = ["futures", "serde"] }
+sum = { version = "0.1.7", default-features = false, features = ["futures", "serde", "0", "1", "2", "3", "4", "5", "6", "7", "8"]  }
 tokio = { version = "0.2", features = ["blocking", "rt-core"] }
 walkdir = "2.2"
 widestring = "0.4"
