--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -29,7 +29,7 @@ pin-project = "0.4"
 postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
-sum = "0.1"
+sum = { version = "0.1.7", default-features = false }
 tokio = "0.2"
 
 [build-dependencies]
