--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -30,7 +30,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 serde_closure = "0.3"
 serde_json = "1.0"
-sum = { version = "0.1", features = ["serde"] }
+sum = { version = "0.1.7", default-features = false, features = ["serde"] }
 recycle = "0.1"
 
 [build-dependencies]
