--- a/amadeus-ml/Cargo.toml
+++ b/amadeus-ml/Cargo.toml
@@ -22,21 +22,23 @@ maintenance = { status = "actively-developed" }
 fast-math = []
 
 [dependencies]
-ndarray = { version = "0.11.0", features = ["serde-1"] }
-rand = { version = "0.5.0", features = ["serde1"] }
-smallvec = { version = "0.5.0", features = ["serde"] }
-itertools = "0.7.3"
-rayon = "1.0.0"
+approx = "0.3"
+hibitset = "0.6"
+itertools = "0.9"
+ndarray = { version = "0.13", features = ["approx", "serde"] }
+rand = { version = "0.7", features = ["serde1"] }
+rand_distr = "0.2"
+rayon = "1.3"
 serde = { version = "1", features = ["derive", "rc"] }
-hibitset = "0.5.0"
+smallvec = { version = "1.4", features = ["serde"] }
 
 [build-dependencies]
 rustversion = "1.0"
 
 [dev-dependencies]
-# ndarray = { version = "0.11.0", features = ["blas", "serde-1"] }
-# blas-src = { version = "0.1.2", default-features = false, features = ["openblas"] }
-# openblas-src = { version = "0.5.6", default-features = false, features = ["static"] }
+# ndarray = { version = "0.13", features = ["blas"] }
+# blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
+# openblas-src = { version = "0.6", default-features = false, features = ["static"] }
 criterion = "0.2.3"
 
 [[bench]]
