--- a/amadeus-parquet/Cargo.toml
+++ b/amadeus-parquet/Cargo.toml
@@ -29,7 +29,7 @@ educe = "0.4"
 flate2 = { version = "1.0.2", features = ["rust_backend"], default-features = false }
 futures = "0.3"
 fxhash = "0.2"
-hashlink = { version = "0.6", features = ["serde_impl"] }
+hashlink = { version = "0.6.1-alpha.0", features = ["serde_impl"], git = "https://github.com/robinbernon/hashlink", branch = "generic_hashmap_deserialization" }
 lz-fear = "0.1"
 num-bigint = "0.3"
 quick-error = "1.2.2"
