--- a/amadeus-streaming/Cargo.toml
+++ b/amadeus-streaming/Cargo.toml
@@ -27,6 +27,10 @@ rand = { version = "0.7", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
 twox-hash = "1.1"
+protobuf = "2.22.1"
+
+[dev-dependencies]
+hex = "0.4.3"
 
 [build-dependencies]
 rustversion = "1.0"
