--- a/amadeus-streaming/Cargo.toml
+++ b/amadeus-streaming/Cargo.toml
@@ -20,14 +20,15 @@ maintenance = { status = "actively-developed" }
 
 [features]
 nightly = ["packed_simd"]
+ser-proto = ["protobuf"]
 
 [dependencies]
 packed_simd = { version = "0.3", features = ["into_bits"], optional = true }
+protobuf = { version="2.22.1", optional = true }
 rand = { version = "0.7", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
 twox-hash = "1.1"
-protobuf = "2.22.1"
 
 [dev-dependencies]
 hex = "0.4.3"
